Fix portfolio layout issue

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -253,7 +253,7 @@ section.success {
     right: 0;
     margin: 0 0 15px;
     max-width: 400px;
-    max-height: 260px;
+    max-height: 255px;
 }
 
 #portfolio .portfolio-item .portfolio-link {
